cmake_minimum_required(VERSION 3.12)

#add_executable(ECC-test
#        )
#
#target_link_libraries(ECC-test
#        PRIVATE ECC unity)
#
#add_dependencies(ECC-test unity_ext)
#
#target_compile_definitions(ECC-test PUBLIC ${ECC_COMPILE_COMMANDS})
#
#add_test(ECCTest ECC-test)


add_subdirectory(fakes)
